# bow

./: .profile  Makefile  build.sh  json.sh  meson.build
examples/: config  generate-text-json-expression.sh
src/: main.c  message.c  message.h  window.c
